--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "material-ui": "^0.20.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "react-social-media-embed": "^2.5.17"
   },
   "devDependencies": {},
   "keywords": [
