--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "country-to-iso": "^1.5.1",
     "gh-pages": "^6.3.0",
     "material-ui": "^0.20.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^7.1.2",
     "react-scripts": "5.0.0",
     "react-social-media-embed": "^2.5.17"
   },
