--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "material-ui": "^0.20.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-pdf": "^9.2.1",
     "react-router-dom": "^7.1.2",
     "react-scripts": "5.0.0",
     "react-social-media-embed": "^2.5.17"
@@ -31,7 +32,7 @@
     "travel",
     "resources"
   ],
-  "author": "Your Name",
+  "author": "Nishant",
   "license": "MIT",
   "browserslist": {
     "production": [
