--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@simplepdf/react-embed-pdf": "^1.9.0",
     "country-to-iso": "^1.5.1",
     "gh-pages": "^6.3.0",
     "material-ui": "^0.20.2",
@@ -23,7 +24,8 @@
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.1.2",
     "react-scripts": "5.0.0",
-    "react-social-media-embed": "^2.5.17"
+    "react-social-media-embed": "^2.5.17",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {},
   "keywords": [
