--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@custom-react-hooks/use-element-size": "^1.5.1",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@simplepdf/react-embed-pdf": "^1.9.0",
@@ -25,7 +26,8 @@
     "react-router-dom": "^7.1.2",
     "react-scripts": "5.0.0",
     "react-social-media-embed": "^2.5.17",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {},
   "keywords": [
